k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-prod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: yourdomain.com # Substitua pelo domínio de produção
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-prod-service
                port:
                  number: 80
